Fixed number of days in month being short by 1 and added margin / grid spacing to calendar.

--- a/src/index.css
+++ b/src/index.css
@@ -24,6 +24,9 @@ code {
   font-size: 20px;
   display: grid;
   grid-template-columns: repeat(7, 1fr);
+  column-gap: 5px;
+  row-gap: 5px;
+  margin-bottom: 5px;
 }
 
 .days div, .dates div {
